# enhancer-design-zebrafish

./: .gitignore  LICENSE  README.md  pyproject.toml
design/: design.py  design_penalize_grhl.py  design_penalize_mxtx2.py
models/: download_model_weights.py
src/: definitions.py  model.py  plot.py  sequence.py  utils.py
src/resources/: cell_state_metadata.csv  edge_prob.txt
